--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
   "dependencies": {
     "axios": "^0.16.1",
     "lodash": "^4.17.4",
+    "markdown-it": "^8.4.0",
     "marked": "^0.3.6",
     "vue": "^2.3.3",
     "vue-electron": "^1.0.6",
